@@ -1,5 +1,15 @@
 2007-05-01  Jens Granseuer  <jensgr@gmx.net>
 
+	* appearance-main.c: (main):
+	* appearance-ui.c:
+	* appearance-ui.h:
+	* appearance.h:
+	* appearance.glade:
+
+	fill the Preferences tab with life
+
+2007-05-01  Jens Granseuer  <jensgr@gmx.net>
+
 	* appearance-main.c: (init_appearance_data), (main):
 	* appearance.h:
 
